--- a/templates/about.html
+++ b/templates/about.html
@@ -12,10 +12,7 @@
         integrity="sha512-HXXR0l2yMwHDrDyxJbrMD9eLvPe3z3qL3PPeozNTsiHJEENxx8DH2CxmV05iwG0dwoz5n4gQZQyYLUNt1Wdgfg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="stylesheet" href="dissertation.html">
-    <link rel="stylesheet" href="reserch.html">
-    <link rel="stylesheet" href="term_paper.html">
+    <link rel="stylesheet" href="/static/assets/style.css">
     <title>Writing Assistant</title>
 </head>
 
@@ -28,24 +25,24 @@
                     <div class="col-12">
                         <div class=" d-flex justify-content-between align-items-center">
                             <div>
-                                <a class=" text-decoration-none" href="index.html"><img src="assets/images/logo.png"
+                                <a class=" text-decoration-none" href="/index"><img src="/static/assets/images/logo.png"
                                         alt="" class=" img-fluid" width="100px"></a>
                             </div>
                             <div class="mt-3 nav-bar">
                                 <ul class=" d-flex align-items-center   gap-5 list-unstyled">
-                                    <li><a href="reserch.html">Services</a></li>
-                                    <li><a href="reviews.html">reviews</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="how_to_order.html">How to order</a></li>
+                                    <li><a href="/reserch">Services</a></li>
+                                    <li><a href="/reviews">reviews</a></li>
+                                    <li><a href="/about">About</a></li>
+                                    <li><a href="/how_to_order">How to order</a></li>
                                 </ul>
                             </div>
                             <div class=" d-flex gap-3 align-items-center nav-icon">
                                 <div class=" d-flex gap-2 justify-content-center align-items-center">
                                     <i class="ri-account-circle-line"></i>
-                                    <a href="login.html">Login</a>
+                                    <a href="/login">Login</a>
                                 </div>
                                 <div class=" place-order">
-                                    <a href="sign_up.html">place an order</a>
+                                    <a href="/sign_up">place an order</a>
                                 </div>
                             </div>
                         </div>
@@ -98,7 +95,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="about-img">
-                                <img src="assets/images/photo-1591115765373-5207764f72e7.avif" alt=""
+                                <img src="/static/assets/images/photo-1591115765373-5207764f72e7.avif" alt=""
                                     class=" img-fluid">
                             </div>
                         </div>
@@ -136,7 +133,7 @@
 
                 <div class="col-lg-3">
                     <div>
-                        <img src="assets/images/infomark.png" alt="" class=" img-fluid">
+                        <img src="/static/assets/images/infomark.png" alt="" class=" img-fluid">
                     </div>
                 </div>
             </div>
@@ -163,7 +160,7 @@
                             <div class=" contain p-4 shadow">
                                 <div class=" d-flex flex-column justify-content-start gap-4">
                                     <div class="guide-img rounded-circle">
-                                        <img src="assets/images/Clarity.png" alt="" class=" img-fluid">
+                                        <img src="/static/assets/images/Clarity.png" alt="" class=" img-fluid">
                                     </div>
                                     <div>
                                         <h2>clarity</h2>
@@ -178,7 +175,7 @@
                             <div class=" contain p-4 shadow">
                                 <div class=" d-flex flex-column justify-content-start gap-4">
                                     <div class="guide-img rounded-circle">
-                                        <img src="assets/images/Clarity.png" alt="" class=" img-fluid">
+                                        <img src="/static/assets/images/Clarity.png" alt="" class=" img-fluid">
                                     </div>
                                     <div>
                                         <h2>clarity</h2>
@@ -193,7 +190,7 @@
                             <div class=" contain p-4 shadow">
                                 <div class=" d-flex flex-column justify-content-start gap-4">
                                     <div class="guide-img rounded-circle">
-                                        <img src="assets/images/Formatting.png" alt="" class=" img-fluid">
+                                        <img src="/static/assets/images/Formatting.png" alt="" class=" img-fluid">
                                     </div>
                                     <div>
                                         <h2>clarity</h2>
@@ -212,7 +209,7 @@
                             <div class=" contain p-4 shadow">
                                 <div class=" d-flex flex-column justify-content-start gap-4">
                                     <div class="guide-img rounded-circle">
-                                        <img src="assets/images/grammer.png" alt="" class=" img-fluid">
+                                        <img src="/static/assets/images/grammer.png" alt="" class=" img-fluid">
                                     </div>
                                     <div>
                                         <h2>clarity</h2>
@@ -227,7 +224,7 @@
                             <div class=" contain p-4 shadow">
                                 <div class=" d-flex flex-column justify-content-start gap-4">
                                     <div class="guide-img rounded-circle">
-                                        <img src="assets/images/Originality.png" alt="" class=" img-fluid">
+                                        <img src="/static/assets/images/Originality.png" alt="" class=" img-fluid">
                                     </div>
                                     <div>
                                         <h2>clarity</h2>
@@ -242,7 +239,7 @@
                             <div class=" contain p-4 shadow">
                                 <div class=" d-flex flex-column justify-content-start gap-4">
                                     <div class="guide-img rounded-circle">
-                                        <img src="assets/images/Readability.png" alt="" class=" img-fluid">
+                                        <img src="/static/assets/images/Readability.png" alt="" class=" img-fluid">
                                     </div>
                                     <div>
                                         <h2>clarity</h2>
@@ -261,7 +258,7 @@
                             <div class=" d-flex justify-content-start  align-items-center gap-5 px-5">
                                 <div
                                     class=" rounded-circle guide-img d-flex align-items-center justify-content-center gap-2">
-                                    <img src="assets/images/icon7.png" alt="" class=" img-fluid">
+                                    <img src="/static/assets/images/icon7.png" alt="" class=" img-fluid">
                                     <h3 class=" text-white">Proofreading:</h3>
                                 </div>
                                 <div>
@@ -304,7 +301,7 @@
                         </div>
                         <div class="col-lg-5 d-flex justify-content-center align-items-center">
                             <div>
-                                <img src="assets/images/moneybackguranty.png" alt="" class=" img-fluid">
+                                <img src="/static/assets/images/moneybackguranty.png" alt="" class=" img-fluid">
                             </div>
                         </div>
                     </div>
@@ -337,7 +334,7 @@
                                             </p>
                                         </div>
                                         <div>
-                                            <img src="/assets/images/99.png" alt="" width="150px">
+                                            <img src="//static/assets/images/99.png" alt="" width="150px">
                                         </div>
                                     </div>
                                 </div>
@@ -352,7 +349,7 @@
                                             <p class=" text-secondary fw-light">students assisted and counting!</p>
                                         </div>
                                         <div>
-                                            <img src="/assets/images/24.png" alt="" width="150px">
+                                            <img src="//static/assets/images/24.png" alt="" width="150px">
                                         </div>
                                     </div>
                                 </div>
@@ -368,7 +365,7 @@
                                                 services</p>
                                         </div>
                                         <div>
-                                            <img src="/assets/images/95.png" alt="" width="150px">
+                                            <img src="//static/assets/images/95.png" alt="" width="150px">
                                         </div>
                                     </div>
                                 </div>
@@ -385,7 +382,7 @@
                                             </p>
                                         </div>
                                         <div>
-                                            <img src="/assets/images/98.png" alt="" width="150px">
+                                            <img src="//static/assets/images/98.png" alt="" width="150px">
                                         </div>
                                     </div>
                                 </div>
@@ -412,7 +409,7 @@
                                         <div class=" p-4 d-flex flex-wrap gap-3 shadow-main shadow">
                                             <div
                                                 class="img-round rounded-circle d-flex justify-content-center align-items-center">
-                                                <img src="assets/images/businessicon1.png" alt="">
+                                                <img src="/static/assets/images/businessicon1.png" alt="">
                                             </div>
                                             <div>
                                                 <h2 class="fs-4">Quality Guarantee</h2>
@@ -427,7 +424,7 @@
                                         <div class=" p-4 d-flex flex-wrap gap-3 shadow-main shadow">
                                             <div
                                                 class="img-round rounded-circle d-flex justify-content-center align-items-center">
-                                                <img src="assets/images/businessicon2.png" alt="">
+                                                <img src="/static/assets/images/businessicon2.png" alt="">
                                             </div>
                                             <div>
                                                 <h2 class="fs-4">Subject Specialists</h2>
@@ -443,7 +440,7 @@
                                         <div class=" p-4 d-flex flex-wrap gap-3 shadow-main shadow">
                                             <div
                                                 class="img-round rounded-circle d-flex justify-content-center align-items-center">
-                                                <img src="assets/images/businessicon3.png" alt="">
+                                                <img src="/static/assets/images/businessicon3.png" alt="">
                                             </div>
                                             <div>
                                                 <h2 class="fs-4">Delivery Guarantee</h2>
@@ -459,7 +456,7 @@
                                         <div class=" p-4 d-flex flex-wrap gap-3 shadow-main shadow ">
                                             <div
                                                 class="img-round rounded-circle d-flex justify-content-center align-items-center">
-                                                <img src="assets/images/businessicon4.png" alt="">
+                                                <img src="/static/assets/images/businessicon4.png" alt="">
                                             </div>
                                             <div>
                                                 <h2 class="fs-4">Confidentiality</h2>
@@ -476,7 +473,7 @@
                             <div class="col-lg-5 d-flex justify-content-center align-items-center "
                                 data-aos="fade-down">
                                 <div class="img-side">
-                                    <img src="assets/images/businessimage1.png" alt="" class=" img-fluid">
+                                    <img src="/static/assets/images/businessimage1.png" alt="" class=" img-fluid">
                                 </div>
                             </div>
                         </div>
@@ -532,7 +529,7 @@
                                                                     class=" d-flex justify-content-start align-items-center gap-3">
                                                                     <div
                                                                         class=" rounded-circle d-flex justify-content-center align-items-center test">
-                                                                        <img src="assets/images/photo-1633332755192-727a05c4013d.avif"
+                                                                        <img src="/static/assets/images/photo-1633332755192-727a05c4013d.avif"
                                                                             alt="" class=" img-fluid rounded-circle">
                                                                     </div>
                                                                     <div>
@@ -571,7 +568,7 @@
                                                                     class=" d-flex justify-content-start align-items-center gap-3">
                                                                     <div
                                                                         class=" rounded-circle d-flex justify-content-center align-items-center test">
-                                                                        <img src="assets/images/photo-1633332755192-727a05c4013d.avif"
+                                                                        <img src="/static/assets/images/photo-1633332755192-727a05c4013d.avif"
                                                                             alt="" class=" img-fluid rounded-circle">
                                                                     </div>
                                                                     <div>
@@ -610,7 +607,7 @@
                                                                     class=" d-flex justify-content-start align-items-center gap-3">
                                                                     <div
                                                                         class=" rounded-circle d-flex justify-content-center align-items-center test">
-                                                                        <img src="assets/images/photo-1633332755192-727a05c4013d.avif"
+                                                                        <img src="/static/assets/images/photo-1633332755192-727a05c4013d.avif"
                                                                             alt="" class=" img-fluid rounded-circle">
                                                                     </div>
                                                                     <div>
@@ -674,7 +671,7 @@
                     <div class=" d-flex justify-content-center">
                         <div class="col-lg-4 col-md-12 col-6">
                             <div class=" d-flex flex-column justify-content-start gap-4">
-                                <div class="img-foot"><img src="assets/images/whitebook.png" alt="" class=" img-fluid">
+                                <div class="img-foot"><img src="/static/assets/images/whitebook.png" alt="" class=" img-fluid">
                                 </div>
                                 <p class=" text-white w-75">Overcome academic challenges with our UK Essay and
                                     Dissertation Help. Contact us for
@@ -761,7 +758,7 @@
             duration: 1000
         });
     </script>
-    <script src="script.js"></script>
+    <script src="/static/assests/script.js"></script>
 </body>
 
 </html>
