--- a/templates/how_to_order.html
+++ b/templates/how_to_order.html
@@ -12,10 +12,7 @@
         integrity="sha512-HXXR0l2yMwHDrDyxJbrMD9eLvPe3z3qL3PPeozNTsiHJEENxx8DH2CxmV05iwG0dwoz5n4gQZQyYLUNt1Wdgfg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="stylesheet" href="dissertation.html">
-    <link rel="stylesheet" href="reserch.html">
-    <link rel="stylesheet" href="term_paper.html">
+    <link rel="stylesheet" href="/static/assets/style.css">
     <title>Writing Assistant</title>
 </head>
 
@@ -28,24 +25,24 @@
                     <div class="col-12">
                         <div class=" d-flex justify-content-between align-items-center">
                             <div>
-                                <a class=" text-decoration-none" href="index.html"><img src="assets/images/logo.png"
+                                <a class=" text-decoration-none" href="/index"><img src="/static/assets/images/logo.png"
                                         alt="" class=" img-fluid" width="100px"></a>
                             </div>
                             <div class="mt-3 nav-bar">
                                 <ul class=" d-flex align-items-center   gap-5 list-unstyled">
-                                    <li><a href="reserch.html">Services</a></li>
-                                    <li><a href="reviews.html">reviews</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="how_to_order.html">How to order</a></li>
+                                    <li><a href="/reserch">Services</a></li>
+                                    <li><a href="/reviews">reviews</a></li>
+                                    <li><a href="/about">About</a></li>
+                                    <li><a href="/how_to_order">How to order</a></li>
                                 </ul>
                             </div>
                             <div class=" d-flex gap-3 align-items-center nav-icon">
                                 <div class=" d-flex gap-2 justify-content-center align-items-center">
                                     <i class="ri-account-circle-line"></i>
-                                    <a href="login.html">Login</a>
+                                    <a href="/login">Login</a>
                                 </div>
                                 <div class=" place-order">
-                                    <a href="sign_up.html">place an order</a>
+                                    <a href="/sign_up">place an order</a>
                                 </div>
                             </div>
                         </div>
@@ -109,7 +106,7 @@
                 <div class=" d-flex justify-content-center gap-3 pb-5">
                     <div class="col-lg-6 login">
                         <div class=" d-flex justify-content-center align-items-center">
-                            <img src="assets/images/login.png" alt="" width="200px">
+                            <img src="/static/assets/images/login.png" alt="" width="200px">
                         </div>
                     </div>
                     <div class="col-lg-6 d-flex flex-column gap-4 justify-content-center">
@@ -153,7 +150,7 @@
 
                     <div class="col-lg-6 login">
                         <div class=" d-flex justify-content-center align-items-center">
-                            <img src="assets/images/upload.png" alt="" width="200px">
+                            <img src="/static/assets/images/upload.png" alt="" width="200px">
                         </div>
                     </div>
                 </div>
@@ -163,7 +160,7 @@
                 <div class=" d-flex justify-content-center gap-3 pb-5">
                     <div class="col-lg-6 login">
                         <div class=" d-flex justify-content-center align-items-center">
-                            <img src="assets/images/detail.png" alt="" width="200px">
+                            <img src="/static/assets/images/detail.png" alt="" width="200px">
                         </div>
                     </div>
 
@@ -204,7 +201,7 @@
 
                     <div class="col-lg-6 login">
                         <div class=" d-flex justify-content-center align-items-center">
-                            <img src="assets/images/importantinfo.png" alt="" width="200px">
+                            <img src="/static/assets/images/importantinfo.png" alt="" width="200px">
                         </div>
                     </div>
                 </div>
@@ -233,7 +230,7 @@
                             <div class=" contain p-4 shadow">
                                 <div class=" d-flex flex-column justify-content-start gap-4">
                                     <div class="guide-img rounded-circle">
-                                        <img src="assets/images/Clarity.png" alt="" class=" img-fluid">
+                                        <img src="/static/assets/images/Clarity.png" alt="" class=" img-fluid">
                                     </div>
                                     <div>
                                         <h2>clarity</h2>
@@ -248,7 +245,7 @@
                             <div class=" contain p-4 shadow">
                                 <div class=" d-flex flex-column justify-content-start gap-4">
                                     <div class="guide-img rounded-circle">
-                                        <img src="assets/images/Clarity.png" alt="" class=" img-fluid">
+                                        <img src="/static/assets/images/Clarity.png" alt="" class=" img-fluid">
                                     </div>
                                     <div>
                                         <h2>clarity</h2>
@@ -263,7 +260,7 @@
                             <div class=" contain p-4 shadow">
                                 <div class=" d-flex flex-column justify-content-start gap-4">
                                     <div class="guide-img rounded-circle">
-                                        <img src="assets/images/Formatting.png" alt="" class=" img-fluid">
+                                        <img src="/static/assets/images/Formatting.png" alt="" class=" img-fluid">
                                     </div>
                                     <div>
                                         <h2>clarity</h2>
@@ -283,7 +280,7 @@
                             <div class=" contain p-4 shadow">
                                 <div class=" d-flex flex-column justify-content-start gap-4">
                                     <div class="guide-img rounded-circle">
-                                        <img src="assets/images/grammer.png" alt="" class=" img-fluid">
+                                        <img src="/static/assets/images/grammer.png" alt="" class=" img-fluid">
                                     </div>
                                     <div>
                                         <h2>clarity</h2>
@@ -298,7 +295,7 @@
                             <div class=" contain p-4 shadow">
                                 <div class=" d-flex flex-column justify-content-start gap-4">
                                     <div class="guide-img rounded-circle">
-                                        <img src="assets/images/Originality.png" alt="" class=" img-fluid">
+                                        <img src="/static/assets/images/Originality.png" alt="" class=" img-fluid">
                                     </div>
                                     <div>
                                         <h2>clarity</h2>
@@ -313,7 +310,7 @@
                             <div class=" contain p-4 shadow">
                                 <div class=" d-flex flex-column justify-content-start gap-4">
                                     <div class="guide-img rounded-circle">
-                                        <img src="assets/images/Readability.png" alt="" class=" img-fluid">
+                                        <img src="/static/assets/images/Readability.png" alt="" class=" img-fluid">
                                     </div>
                                     <div>
                                         <h2>clarity</h2>
@@ -333,7 +330,7 @@
                             <div class=" d-flex justify-content-start  align-items-center gap-5 px-5">
                                 <div
                                     class=" rounded-circle guide-img d-flex align-items-center justify-content-center gap-2">
-                                    <img src="assets/images/icon7.png" alt="" class=" img-fluid">
+                                    <img src="/static/assets/images/icon7.png" alt="" class=" img-fluid">
                                     <h3 class=" text-white">Proofreading:</h3>
                                 </div>
                                 <div>
@@ -371,7 +368,7 @@
                                         </p>
                                     </div>
                                     <div>
-                                        <img src="/assets/images/99.png" alt="" width="150px">
+                                        <img src="//static/assets/images/99.png" alt="" width="150px">
                                     </div>
                                 </div>
                             </div>
@@ -386,7 +383,7 @@
                                         <p class=" text-secondary fw-light">students assisted and counting!</p>
                                     </div>
                                     <div>
-                                        <img src="/assets/images/24.png" alt="" width="150px">
+                                        <img src="//static/assets/images/24.png" alt="" width="150px">
                                     </div>
                                 </div>
                             </div>
@@ -401,7 +398,7 @@
                                             services</p>
                                     </div>
                                     <div>
-                                        <img src="/assets/images/95.png" alt="" width="150px">
+                                        <img src="//static/assets/images/95.png" alt="" width="150px">
                                     </div>
                                 </div>
                             </div>
@@ -418,7 +415,7 @@
                                         </p>
                                     </div>
                                     <div>
-                                        <img src="/assets/images/98.png" alt="" width="150px">
+                                        <img src="//static/assets/images/98.png" alt="" width="150px">
                                     </div>
                                 </div>
                             </div>
@@ -445,7 +442,7 @@
                                     <div class=" p-4 d-flex flex-wrap gap-3 shadow-main shadow">
                                         <div
                                             class="img-round rounded-circle d-flex justify-content-center align-items-center">
-                                            <img src="assets/images/businessicon1.png" alt="">
+                                            <img src="/static/assets/images/businessicon1.png" alt="">
                                         </div>
                                         <div>
                                             <h2 class="fs-4">Quality Guarantee</h2>
@@ -460,7 +457,7 @@
                                     <div class=" p-4 d-flex flex-wrap gap-3 shadow-main shadow">
                                         <div
                                             class="img-round rounded-circle d-flex justify-content-center align-items-center">
-                                            <img src="assets/images/businessicon2.png" alt="">
+                                            <img src="/static/assets/images/businessicon2.png" alt="">
                                         </div>
                                         <div>
                                             <h2 class="fs-4">Subject Specialists</h2>
@@ -476,7 +473,7 @@
                                     <div class=" p-4 d-flex flex-wrap gap-3 shadow-main shadow">
                                         <div
                                             class="img-round rounded-circle d-flex justify-content-center align-items-center">
-                                            <img src="assets/images/businessicon3.png" alt="">
+                                            <img src="/static/assets/images/businessicon3.png" alt="">
                                         </div>
                                         <div>
                                             <h2 class="fs-4">Delivery Guarantee</h2>
@@ -492,7 +489,7 @@
                                     <div class=" p-4 d-flex flex-wrap gap-3 shadow-main shadow ">
                                         <div
                                             class="img-round rounded-circle d-flex justify-content-center align-items-center">
-                                            <img src="assets/images/businessicon4.png" alt="">
+                                            <img src="/static/assets/images/businessicon4.png" alt="">
                                         </div>
                                         <div>
                                             <h2 class="fs-4">Confidentiality</h2>
@@ -508,7 +505,7 @@
 
                         <div class="col-lg-5 d-flex justify-content-center align-items-center " data-aos="fade-down">
                             <div class="img-side">
-                                <img src="assets/images/businessimage1.png" alt="" class=" img-fluid">
+                                <img src="/static/assets/images/businessimage1.png" alt="" class=" img-fluid">
                             </div>
                         </div>
                     </div>
@@ -564,7 +561,7 @@
                                                                 class=" d-flex justify-content-start align-items-center gap-3">
                                                                 <div
                                                                     class=" rounded-circle d-flex justify-content-center align-items-center test">
-                                                                    <img src="assets/images/photo-1633332755192-727a05c4013d.avif"
+                                                                    <img src="/static/assets/images/photo-1633332755192-727a05c4013d.avif"
                                                                         alt="" class=" img-fluid rounded-circle">
                                                                 </div>
                                                                 <div>
@@ -603,7 +600,7 @@
                                                                 class=" d-flex justify-content-start align-items-center gap-3">
                                                                 <div
                                                                     class=" rounded-circle d-flex justify-content-center align-items-center test">
-                                                                    <img src="assets/images/photo-1633332755192-727a05c4013d.avif"
+                                                                    <img src="/static/assets/images/photo-1633332755192-727a05c4013d.avif"
                                                                         alt="" class=" img-fluid rounded-circle">
                                                                 </div>
                                                                 <div>
@@ -642,7 +639,7 @@
                                                                 class=" d-flex justify-content-start align-items-center gap-3">
                                                                 <div
                                                                     class=" rounded-circle d-flex justify-content-center align-items-center test">
-                                                                    <img src="assets/images/photo-1633332755192-727a05c4013d.avif"
+                                                                    <img src="/static/assets/images/photo-1633332755192-727a05c4013d.avif"
                                                                         alt="" class=" img-fluid rounded-circle">
                                                                 </div>
                                                                 <div>
@@ -706,7 +703,7 @@
                     <div class=" d-flex justify-content-center">
                         <div class="col-lg-4 col-md-12 col-6">
                             <div class=" d-flex flex-column justify-content-start gap-4">
-                                <div class="img-foot"><img src="assets/images/whitebook.png" alt="" class=" img-fluid">
+                                <div class="img-foot"><img src="/static/assets/images/whitebook.png" alt="" class=" img-fluid">
                                 </div>
                                 <p class=" text-white w-75">Overcome academic challenges with our UK Essay and
                                     Dissertation Help. Contact us for
@@ -793,7 +790,7 @@
             duration: 1000
         });
     </script>
-    <script src="script.js"></script>
+    <script src="/static/assets/script.js"></script>
 </body>
 
 </html>
