--- a/templates/index.html
+++ b/templates/index.html
@@ -34,18 +34,18 @@
                             <div class="mt-3 nav-bar">
                                 <ul class=" d-flex align-items-center   gap-5 list-unstyled">
                                     <li class="anchor"><a href="#">Services</a></li>
-                                    <li><a href="reviews.html">reviews</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="how_to_order.html">How to order</a></li>
+                                    <li><a href="/reviews">reviews</a></li>
+                                    <li><a href="/about">About</a></li>
+                                    <li><a href="/how_to_order">How to order</a></li>
                                 </ul>
                             </div>
                             <div class=" d-flex gap-3 align-items-center nav-icon">
                                 <div class=" d-flex gap-2 justify-content-center align-items-center">
                                     <i class="ri-account-circle-line"></i>
-                                    <a href="login.html">Login</a>
+                                    <a href="/login">Login</a>
                                 </div>
                                 <div class=" place-order">
-                                    <a href="sign_up.html">place an order</a>
+                                    <a href="/sign_up">place an order</a>
                                 </div>
                             </div>
                         </div>
@@ -125,12 +125,12 @@
                                 </div>
                                 <div class="tools">
                                     <div class=" d-flex flex-row-reverse gap-5 overflow-x-hidden">
-                                        <img src="//static/assets/images/1.png" alt="">
-                                        <img src="//static/assets/images/2.png" alt="">
-                                        <img src="//static/assets/images/3.png" alt="">
-                                        <img src="//static/assets/images/4.png" alt="">
-                                        <img src="//static/assets/images/5.png" alt="">
-                                        <img src="//static/assets/images/6.png" alt="">
+                                        <img src="/static/assets/images/1.png" alt="">
+                                        <img src="/static/assets/images/2.png" alt="">
+                                        <img src="/static/assets/images/3.png" alt="">
+                                        <img src="/static/assets/images/4.png" alt="">
+                                        <img src="/static/assets/images/5.png" alt="">
+                                        <img src="/static/assets/images/6.png" alt="">
                                     </div>
                                 </div>
                                 <div class="arrow-left d-flex justify-content-center align-items-center">
@@ -154,7 +154,7 @@
                         <div class="col-lg-6" data-aos="fade-down">
                             <div class=" d-flex flex-column justify-content-start gap-3">
                                 <div>
-                                    <img src="//static/assets/images/whitebook.png" alt="">
+                                    <img src="/static/assets/images/whitebook.png" alt="">
                                 </div>
                                 <div class="hero-h1">
                                     <h1 class=" text-white">Can a professor tell if an essay is from Writing Assistance?
@@ -173,7 +173,7 @@
 
                         <div class="col-lg-6" data-aos="fade-left">
                             <div>
-                                <img src="//static/assets/images/videoimage.png" alt="" class=" img-fluid">
+                                <img src="/static/assets/images/videoimage.png" alt="" class=" img-fluid">
                             </div>
                         </div>
                     </div>
@@ -196,7 +196,7 @@
                         <div class="card">
                             <div class="d-flex flex-column justify-content-start card-child gap-4">
                                 <div class="dis-icons shadow">
-                                    <img src="//static/assets/images/icon3.png" alt="">
+                                    <img src="/static/assets/images/icon3.png" alt="">
                                 </div>
                                 <div class="h2">
                                     <h2 class=" text-dark"><span>Expert</span> Guidence</h2>
@@ -213,7 +213,7 @@
                         <div class="card">
                             <div class="d-flex flex-column justify-content-start card-child gap-4">
                                 <div class="dis-icons shadow">
-                                    <img src="//static/assets/images/icon3.png" alt="">
+                                    <img src="/static/assets/images/icon3.png" alt="">
                                 </div>
                                 <div class="h2">
                                     <h2 class=" text-dark"><span>Expert</span> Guidence</h2>
@@ -230,7 +230,7 @@
                         <div class="card">
                             <div class="d-flex flex-column justify-content-start card-child gap-4">
                                 <div class="dis-icons shadow">
-                                    <img src="//static/assets/images/icon4.png" alt="">
+                                    <img src="/static/assets/images/icon4.png" alt="">
                                 </div>
                                 <div class="h2">
                                     <h2 class=" text-dark"><span>Expert</span> Guidence</h2>
@@ -247,7 +247,7 @@
                         <div class="card">
                             <div class="d-flex flex-column justify-content-start card-child gap-4">
                                 <div class="dis-icons shadow">
-                                    <img src="//static/assets/images/icon5.png" alt="">
+                                    <img src="/static/assets/images/icon5.png" alt="">
                                 </div>
                                 <div class="h2">
                                     <h2 class=" text-dark"><span>Expert</span> Guidence</h2>
@@ -276,46 +276,46 @@
                 <div class="row" data-aos="fade-down">
                     <div class="main-flex d-flex flex-wrap g-5 justify-content-center align-items-center">
                         <div class="col-6 col-lg-3 col-md-4">
-                            <img src="//static/assets/images/1 (1).png" alt="" class=" img-fluid">
+                            <img src="/static/assets/images/1 (1).png" alt="" class=" img-fluid">
                         </div>
                         <div class="col-6 col-lg-3 col-md-4">
-                            <img src="//static/assets/images/2 (1).png" alt="" class=" img-fluid">
+                            <img src="/static/assets/images/2 (1).png" alt="" class=" img-fluid">
                         </div>
                         <div class="col-6 col-lg-3 col-md-4">
-                            <img src="//static/assets/images/3 (1).png" alt="" class=" img-fluid">
+                            <img src="/static/assets/images/3 (1).png" alt="" class=" img-fluid">
                         </div>
                         <div class="col-6 col-lg-3 col-md-4">
-                            <img src="//static/assets/images/4 (1).png" alt="" class=" img-fluid">
+                            <img src="/static/assets/images/4 (1).png" alt="" class=" img-fluid">
                         </div>
                         <div class="col-6 col-lg-3 col-md-4">
-                            <img src="//static/assets/images/5 (1).png" alt="" class=" img-fluid">
+                            <img src="/static/assets/images/5 (1).png" alt="" class=" img-fluid">
                         </div>
                         <div class="col-6 col-lg-3 col-md-4">
-                            <img src="//static/assets/images/6 (1).png" alt="" class=" img-fluid">
+                            <img src="/static/assets/images/6 (1).png" alt="" class=" img-fluid">
                         </div>
                         <div class="col-6 col-lg-3 col-md-4">
-                            <img src="//static/assets/images/7.png" alt="" class=" img-fluid">
+                            <img src="/static/assets/images/7.png" alt="" class=" img-fluid">
                         </div>
                         <div class="col-6 col-lg-3 col-md-4">
-                            <img src="//static/assets/images/8.png" alt="" class=" img-fluid">
+                            <img src="/static/assets/images/8.png" alt="" class=" img-fluid">
                         </div>
                         <div class="col-6 col-lg-3 col-md-4">
-                            <img src="//static/assets/images/9.png" alt="" class=" img-fluid">
+                            <img src="/static/assets/images/9.png" alt="" class=" img-fluid">
                         </div>
                         <div class="col-6 col-lg-3 col-md-4">
-                            <img src="//static/assets/images/10.png" alt="" class=" img-fluid">
+                            <img src="/static/assets/images/10.png" alt="" class=" img-fluid">
                         </div>
                         <div class="col-6 col-lg-3 col-md-4">
-                            <img src="//static/assets/images/11.png" alt="" class=" img-fluid">
+                            <img src="/static/assets/images/11.png" alt="" class=" img-fluid">
                         </div>
                         <div class="col-6 col-lg-3 col-md-4">
-                            <img src="//static/assets/images/12.png" alt="" class=" img-fluid">
+                            <img src="/static/assets/images/12.png" alt="" class=" img-fluid">
                         </div>
                         <div class="col-6 col-lg-3 col-md-4">
-                            <img src="//static/assets/images/13.png" alt="" class=" img-fluid">
+                            <img src="/static/assets/images/13.png" alt="" class=" img-fluid">
                         </div>
                         <div class="col-6 col-lg-3 col-md-4">
-                            <img src="//static/assets/images/14.png" alt="" class=" img-fluid">
+                            <img src="/static/assets/images/14.png" alt="" class=" img-fluid">
                         </div>
                     </div>
                 </div>
@@ -345,7 +345,7 @@
                                         log in to access the</p>
                                 </div>
                                 <div>
-                                    <img src="//static/assets/images/login.png" alt="" width="150px">
+                                    <img src="/static/assets/images/login.png" alt="" width="150px">
                                 </div>
                                 <div class="c01 d-flex justify-content-center align-items-center">
                                     <h5>01</h5>
@@ -363,7 +363,7 @@
                                         log in to access the</p>
                                 </div>
                                 <div>
-                                    <img src="//static/assets/images/login.png" alt="" width="150px">
+                                    <img src="/static/assets/images/login.png" alt="" width="150px">
                                 </div>
                                 <div class="c01 d-flex justify-content-center align-items-center">
                                     <h5>01</h5>
@@ -381,7 +381,7 @@
                                         log in to access the</p>
                                 </div>
                                 <div>
-                                    <img src="//static/assets/images/login.png" alt="" width="150px">
+                                    <img src="/static/assets/images/login.png" alt="" width="150px">
                                 </div>
                                 <div class="c01 d-flex justify-content-center align-items-center">
                                     <h5>01</h5>
@@ -399,7 +399,7 @@
                                         log in to access the</p>
                                 </div>
                                 <div>
-                                    <img src="//static/assets/images/login.png" alt="" width="150px">
+                                    <img src="/static/assets/images/login.png" alt="" width="150px">
                                 </div>
                                 <div class="c01 d-flex justify-content-center align-items-center">
                                     <h5>01</h5>
@@ -431,7 +431,7 @@
                                     <p class=" text-secondary fw-light">of clients are active with our services</p>
                                 </div>
                                 <div>
-                                    <img src="//static/assets/images/99.png" alt="" width="150px">
+                                    <img src="/static/assets/images/99.png" alt="" width="150px">
                                 </div>
                             </div>
                         </div>
@@ -446,7 +446,7 @@
                                     <p class=" text-secondary fw-light">students assisted and counting!</p>
                                 </div>
                                 <div>
-                                    <img src="//static/assets/images/24.png" alt="" width="150px">
+                                    <img src="/static/assets/images/24.png" alt="" width="150px">
                                 </div>
                             </div>
                         </div>
@@ -461,7 +461,7 @@
                                         services</p>
                                 </div>
                                 <div>
-                                    <img src="//static/assets/images/95.png" alt="" width="150px">
+                                    <img src="/static/assets/images/95.png" alt="" width="150px">
                                 </div>
                             </div>
                         </div>
@@ -477,7 +477,7 @@
                                     </p>
                                 </div>
                                 <div>
-                                    <img src="//static/assets/images/98.png" alt="" width="150px">
+                                    <img src="/static/assets/images/98.png" alt="" width="150px">
                                 </div>
                             </div>
                         </div>
@@ -822,10 +822,10 @@
     </footer>
     <!--########## footer section end ####### -->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https:/cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
+    <script src="https:/cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
+    <script src="https:/unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https:/cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
         AOS.init({
             offset: 100,
