--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -12,10 +12,7 @@
         integrity="sha512-HXXR0l2yMwHDrDyxJbrMD9eLvPe3z3qL3PPeozNTsiHJEENxx8DH2CxmV05iwG0dwoz5n4gQZQyYLUNt1Wdgfg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="stylesheet" href="dissertation.html">
-    <link rel="stylesheet" href="reserch.html">
-    <link rel="stylesheet" href="term_paper.html">
+    <link rel="stylesheet" href="/static/assets/style.css">
     <title>Writing Assistant</title>
 </head>
 
@@ -28,24 +25,24 @@
                     <div class="col-12">
                         <div class=" d-flex justify-content-between align-items-center">
                             <div>
-                                <a class=" text-decoration-none" href="index.html"><img src="assets/images/logo.png"
+                                <a class=" text-decoration-none" href="index.html"><img src="/static/assets/images/logo.png"
                                         alt="" class=" img-fluid" width="100px"></a>
                             </div>
                             <div class="mt-3 nav-bar">
                                 <ul class=" d-flex align-items-center   gap-5 list-unstyled">
-                                    <li><a href="reserch.html">Services</a></li>
-                                    <li><a href="reviews.html">reviews</a></li>
-                                    <li><a href="about.html">About</a></li>
-                                    <li><a href="how_to_order.html">How to order</a></li>
+                                    <li><a href="/reserch">Services</a></li>
+                                    <li><a href="/reviews">reviews</a></li>
+                                    <li><a href="/about">About</a></li>
+                                    <li><a href="/how_to_order">How to order</a></li>
                                 </ul>
                             </div>
                             <div class=" d-flex gap-3 align-items-center nav-icon">
                                 <div class=" d-flex gap-2 justify-content-center align-items-center">
                                     <i class="ri-account-circle-line"></i>
-                                    <a href="login.html">Login</a>
+                                    <a href="/login">Login</a>
                                 </div>
                                 <div class=" place-order">
-                                    <a href="sign_up.html">place an order</a>
+                                    <a href="/sign_up">place an order</a>
                                 </div>
                             </div>
                         </div>
@@ -135,7 +132,7 @@
                                     </div>
                                     <div class="hero-bt d-flex justify-content-center align-items-center">
                                         <a class=" d-flex justify-content-center align-items-center flex-row-reverse gap-2"
-                                            href="#">GET STARTED <img src="assets/images/video.png" alt=""
+                                            href="#">GET STARTED <img src="/static/assets/images/video.png" alt=""
                                                 class=" img-fluid"></a>
                                     </div>
                                 </div>
@@ -143,7 +140,7 @@
 
                             <div class="col-lg-6" data-aos="fade-left">
                                 <div>
-                                    <img src="/assets/images/servicespaper.png" alt="" class=" img-fluid">
+                                    <img src="//static/assets/images/servicespaper.png" alt="" class=" img-fluid">
                                 </div>
                             </div>
                         </div>
@@ -181,7 +178,7 @@
                     <div class=" d-flex justify-content-center">
                         <div class="col-lg-4 col-md-12 col-6">
                             <div class=" d-flex flex-column justify-content-start gap-4">
-                                <div class="img-foot"><img src="assets/images/whitebook.png" alt="" class=" img-fluid">
+                                <div class="img-foot"><img src="/static/assets/images/whitebook.png" alt="" class=" img-fluid">
                                 </div>
                                 <p class=" text-white w-75">Overcome academic challenges with our UK Essay and
                                     Dissertation Help. Contact us for
